; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/utils/extr_crc32.c_main.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/utils/extr_crc32.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"Usage: crc32 <filename>\0A\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"rb\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"%08x\0A\00", align 1
@.str.3 = private unnamed_addr constant [30 x i8] c"Error opening input file: %s\0A\00", align 1
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca [16384 x i32], align 16
  %9 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %10 = load i32, i32* %4, align 4
  %11 = icmp ne i32 %10, 2
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = load i32, i32* @stderr, align 4
  %14 = call i32 (i32, i8*, ...) @fprintf(i32 %13, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* %3, align 4
  br label %48

15:                                               ; preds = %2
  %16 = load i8**, i8*** %5, align 8
  %17 = getelementptr inbounds i8*, i8** %16, i64 1
  %18 = load i8*, i8** %17, align 8
  %19 = call i32* @fopen(i8* %18, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  store i32* %19, i32** %6, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %22, label %43

22:                                               ; preds = %15
  %23 = call i32 @encoding_crc32(i32 0, i32* null, i32 0)
  store i32 %23, i32* %7, align 4
  br label %24

24:                                               ; preds = %37, %22
  %25 = getelementptr inbounds [16384 x i32], [16384 x i32]* %8, i64 0, i64 0
  %26 = bitcast i32* %25 to i8*
  %27 = load i32*, i32** %6, align 8
  %28 = call i32 @fread(i8* %26, i32 1, i32 65536, i32* %27)
  store i32 %28, i32* %9, align 4
  %29 = load i32, i32* %9, align 4
  %30 = icmp sgt i32 %29, 0
  br i1 %30, label %31, label %36

31:                                               ; preds = %24
  %32 = load i32, i32* %7, align 4
  %33 = getelementptr inbounds [16384 x i32], [16384 x i32]* %8, i64 0, i64 0
  %34 = load i32, i32* %9, align 4
  %35 = call i32 @encoding_crc32(i32 %32, i32* %33, i32 %34)
  store i32 %35, i32* %7, align 4
  br label %37

36:                                               ; preds = %24
  br label %38

37:                                               ; preds = %31
  br label %24

38:                                               ; preds = %36
  %39 = load i32*, i32** %6, align 8
  %40 = call i32 @fclose(i32* %39)
  %41 = load i32, i32* %7, align 4
  %42 = call i32 @printf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i32 %41)
  store i32 0, i32* %3, align 4
  br label %48

43:                                               ; preds = %15
  %44 = load i32, i32* @stderr, align 4
  %45 = load i32, i32* @errno, align 4
  %46 = call i8* @strerror(i32 %45)
  %47 = call i32 (i32, i8*, ...) @fprintf(i32 %44, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.3, i64 0, i64 0), i8* %46)
  store i32 1, i32* %3, align 4
  br label %48

48:                                               ; preds = %43, %38, %12
  %49 = load i32, i32* %3, align 4
  ret i32 %49
}

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @encoding_crc32(i32, i32*, i32) #1

declare dso_local i32 @fread(i8*, i32, i32, i32*) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i8* @strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
